--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div id="myDropdown" class="dropdown-content">
                 <a href="../meny/circles.html">Circles </a>
                 <a href="../meny/meny.html">Meny</a>
-                <a href="../minecraft/minecraft.html">Minecraft</a>
-                <a href="../robberySim/index.html">RobSim</a> 
-                <a href="../js1.html">Survey</a>  
+                <a href="minecraft.html">Minecraft</a>
+                <a href="index.html">RobSim</a> 
+                <a href="js1.html">Survey</a>  
         
                
             </div>
