--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="dropdown">
             <button onclick="myclick()" class="dropbtn">Year one Projects</button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="../meny/circles.html">Circles </a>
-                <a href="../meny/meny.html">Meny</a>
-                <a href="minecraft.html">Minecraft</a>
-                <a href="index.html">RobSim</a> 
-                <a href="js1.html">Survey</a>  
+                <a href="./meny/circles.html">Circles </a>
+                <a href="./meny/meny.html">Meny</a>
+                <a href="./minecraft/minecraft.html">Minecraft</a>
+                <a href="./index.html">RobSim</a> 
+                <a href="./js1.html">Survey</a>  
         
                
             </div>
