--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="./meny/circles.html">Circles </a>
                 <a href="./meny/meny.html">Meny</a>
                 <a href="./minecraft/minecraft.html">Minecraft</a>
-                <a href="./index.html">RobSim</a> 
+                <a href="./robberySim/index.html">RobSim</a> 
                 <a href="./js1.html">Survey</a>  
         
                
