--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="./meny/meny.html">Meny</a>
                 <a href="./minecraft/minecraft.html">Minecraft</a>
                 <a href="./robberySim/index.html">RobSim</a> 
-                <a href="./js1.html">Survey</a>  
+                <a href="./js1.html">punchCal</a>  
         
                
             </div>
