--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="./minecraft/minecraft.html">Minecraft</a>
                 <a href="./robberySim/index.html">RobSim</a> 
                 <a href="./js1.html">punchCal</a>  
-        
+                <a href="../November/js.november.html">novOppgaver</a> 
                
             </div>
         </div>
