--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <a href="./robberySim/index.html">RobSim</a> 
                 <a href="./js1.html">punchCal</a>  
                 <a href="../November/js.november.html">novOppgaver</a> 
+                <a href="./monterclicker.html">novOppgaver</a> 
+             
                
             </div>
         </div>
